feat(schedule): reduce 액션에 시간 조정 모드 추가
