# src/main/java/com/jungwoo/project/memo/schedule/dto/ScheduleBlockReduceTimeMode.java
@@ -1,0 +1,7 @@
+package com.jungwoo.project.memo.schedule.dto;
+
+public enum ScheduleBlockReduceTimeMode {
+    KEEP,
+    SHRINK,
+    CLEAR
+}
